--- a/react/demo/src/Tabs/Tabs.css
+++ b/react/demo/src/Tabs/Tabs.css
@@ -2,6 +2,29 @@
   width: 300px;
   background: #ffeeee;
 }
+:import ("Tabs2.css") {
+  colorW: color
+}
+
+:global(
+  .redButton {
+    border-top: 1px solid red;
+  }
+  .greenButton{
+    border-bottom: 1px solid green;
+  }
+)
+.base {
+  background: #f5f5f5;
+}
+.base {
+  font-family: fantasy;
+}
+.bg {
+  composes: base;
+  composes: base2 from './Tabs2.css';
+  color: #00f0f0;
+}
 
 .tabs {
   height: 50px;
